--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        ul{
+        .search{
             display:none;
         }
         input:focus ~ ul{
@@ -15,7 +15,7 @@
 </head>
 <body>
     <input placeholder="Tìm Kiếm"/>
-    <ul>
+    <ul class="search">
         <li>Java</li>
         <li>PHP</li>
         <li>HTML</li>
@@ -36,6 +36,9 @@
         DIV
         <button>Click ME!!</button>
     </div>
+    <br/>
+    <ul id="comment-block"></ul>
+
     <script src="./java.js"></script>
 </body>
 </html>
